aerocore_build_13.log
Script started on Tue 28 Jun 2016 07:40:15 AM EDT
]0;jessica@mcwiljl-ll1: ~/src/Firmwarejessica@mcwiljl-ll1:~/src/Firmware$ make aerocre[K[Kore_default 
PX4 CONFIG: aerocore_default
[  0%] Built target git_gencpp
[  1%] Built target git_nuttx
[  1%] Built target git_mavlink
[  1%] Built target git_genmsg
[  1%] Built target git_matrix
[  1%] Built target git_uavcan
[  1%] Built target git_ecl
[  2%] Built target romfs
[  2%] Built target nuttx_export_aerocore
[  2%] Built target mixer_gen
[  2%] Built target prebuild_targets
[ 28%] Built target msg_gen
[ 29%] Built target platforms__common
[ 29%] Built target drivers__stm32__adc
[ 31%] Built target drivers__stm32
[ 34%] Built target drivers__device
[ 35%] Built target drivers__stm32__tone_alarm
[ 36%] Built target drivers__px4fmu
[ 36%] Built target platforms__nuttx
[ 36%] Built target drivers__led
[ 37%] Built target drivers__boards__aerocore
[ 38%] Built target drivers__l3gd20
[ 39%] Built target drivers__lsm303d
[ 40%] Built target drivers__ms5611
[ 41%] Built target drivers__gps
[ 41%] Built target drivers__pwm_input
[ 42%] Built target systemcmds__mixer
[ 43%] Built target systemcmds__param
[ 44%] Built target modules__sensors
[35m[1mScanning dependencies of target drivers__aerocore_rc[0m
[ 45%] Built target systemcmds__esc_calib
[ 45%] Built target systemcmds__pwm
[ 45%] Built target systemcmds__perf
[ 46%] Built target systemcmds__top
[ 46%] Built target systemcmds__reboot
[ 46%] Built target systemcmds__config
[ 47%] Built target systemcmds__dumpfile
[ 47%] Built target systemcmds__nshterm
[ 48%] Built target systemcmds__mtd
[ 50%] [32mBuilding CXX object src/drivers/aerocore_rc/CMakeFiles/drivers__aerocore_rc.dir/aerocore_rc.cpp.obj[0m
[ 50%] [32mBuilding C object src/systemcmds/ver/CMakeFiles/systemcmds__ver.dir/ver.c.obj[0m
[ 54%] Built target modules__navigator
[ 54%] [32mBuilding C object src/drivers/aerocore_rc/CMakeFiles/drivers__aerocore_rc.dir/dsm.c.obj[0m
[ 58%] Built target modules__commander
[35m[1mScanning dependencies of target modules__mavlink[0m
/home/jessica/src/Firmware/src/systemcmds/ver/ver.c:67:45: error: 'CONFIG_CDCACM_PRODUCTID' undeclared here (not in a function)
 __EXPORT const uint32_t px4_board_version = CONFIG_CDCACM_PRODUCTID;
                                             ^
compilation terminated due to -Wfatal-errors.
make[3]: *** [src/systemcmds/ver/CMakeFiles/systemcmds__ver.dir/ver.c.obj] Error 1
make[2]: *** [src/systemcmds/ver/CMakeFiles/systemcmds__ver.dir/all] Error 2
make[2]: *** Waiting for unfinished jobs....
In file included from /home/jessica/src/Firmware/src/drivers/aerocore_rc/dsm.c:51:0:
/home/jessica/src/Firmware/src/drivers/aerocore_rc/dsm.c: In function 'dsm_init':
/home/jessica/src/Firmware/src/drivers/aerocore_rc/aerocore_rc.h:139:45: error: 'GPIO_SPEKTRUM_PWR_EN' undeclared (first use in this function)
 # define POWER_SPEKTRUM(_s) stm32_gpiowrite(GPIO_SPEKTRUM_PWR_EN, (_s))
                                             ^
/home/jessica/src/Firmware/src/drivers/aerocore_rc/dsm.c:207:2: note: in expansion of macro 'POWER_SPEKTRUM'
  POWER_SPEKTRUM(true);
  ^
compilation terminated due to -Wfatal-errors.
make[3]: *** [src/drivers/aerocore_rc/CMakeFiles/drivers__aerocore_rc.dir/dsm.c.obj] Error 1
make[3]: *** Waiting for unfinished jobs....
/home/jessica/src/Firmware/src/drivers/aerocore_rc/aerocore_rc.cpp: In member function 'virtual int AeroCoreIO::init()':
/home/jessica/src/Firmware/src/drivers/aerocore_rc/aerocore_rc.cpp:239:27: error: 'debug' was not declared in this scope
   debug("CDev init failed");
                           ^
compilation terminated due to -Wfatal-errors.
make[3]: *** [src/drivers/aerocore_rc/CMakeFiles/drivers__aerocore_rc.dir/aerocore_rc.cpp.obj] Error 1
make[2]: *** [src/drivers/aerocore_rc/CMakeFiles/drivers__aerocore_rc.dir/all] Error 2
[ 58%] [32mBuilding C object src/modules/mavlink/CMakeFiles/modules__mavlink.dir/mavlink.c.obj[0m
[ 59%] [32mBuilding CXX object src/modules/mavlink/CMakeFiles/modules__mavlink.dir/mavlink_main.cpp.obj[0m
[ 59%] [32mBuilding CXX object src/modules/mavlink/CMakeFiles/modules__mavlink.dir/mavlink_mission.cpp.obj[0m
[ 59%] [32mBuilding CXX object src/modules/mavlink/CMakeFiles/modules__mavlink.dir/mavlink_parameters.cpp.obj[0m
[ 59%] [32mBuilding CXX object src/modules/mavlink/CMakeFiles/modules__mavlink.dir/mavlink_orb_subscription.cpp.obj[0m
[ 59%] [32mBuilding CXX object src/modules/mavlink/CMakeFiles/modules__mavlink.dir/mavlink_messages.cpp.obj[0m
[ 59%] [32mBuilding CXX object src/modules/mavlink/CMakeFiles/modules__mavlink.dir/mavlink_stream.cpp.obj[0m
[ 60%] [32mBuilding CXX object src/modules/mavlink/CMakeFiles/modules__mavlink.dir/mavlink_rate_limiter.cpp.obj[0m
[ 60%] [32mBuilding CXX object src/modules/mavlink/CMakeFiles/modules__mavlink.dir/mavlink_receiver.cpp.obj[0m
[ 60%] [32mBuilding CXX object src/modules/mavlink/CMakeFiles/modules__mavlink.dir/mavlink_ftp.cpp.obj[0m
[ 61%] [32mBuilding CXX object src/modules/mavlink/CMakeFiles/modules__mavlink.dir/mavlink_log_handler.cpp.obj[0m
[ 61%] [32m[1mLinking CXX static library libmodules__mavlink.a[0m
[ 61%] Built target modules__mavlink
make[1]: *** [all] Error 2
make: *** [aerocore_default] Error 2
]0;jessica@mcwiljl-ll1: ~/src/Firmwarejessica@mcwiljl-ll1:~/src/Firmware$ exit
exit

Script done on Tue 28 Jun 2016 07:40:55 AM EDT
